apps/base/readarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: readarr
  labels:
    app: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
      - name: readarr
        # image in kusomization patches
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8787
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8787
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8787
          initialDelaySeconds: 30
          periodSeconds: 5
      securityContext:
        fsGroup: 1000
