apps/base/readarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: readarr-svc
  namespace: readarr
spec:
  selector:
    app: readarr
  ports:
    - protocol: TCP
      port: 8787
      targetPort: 8787
