apps/base/readarr/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr-https-route
  namespace: readarr
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: internal-https-gateway
      namespace: default
  hostnames:
    - readarr.internal.leomercier.dev
  rules:
    - backendRefs:
        - name: readarr-svc
          port: 8787
